added test max heap size