@@ -10,20 +10,19 @@ description = "Illustrator for single-source shortest path problem using openstr
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
+    options.encoding = 'UTF-8'
 }
 
-repositories {
-     mavenCentral()        
-     maven { url "https://repo.spring.io/libs-release" }
-     maven { url "http://repo.maven.apache.org/maven2" }
+test {
+    maxHeapSize = "1024m"
+    jvmArgs "-XX:MaxPermSize=256m"
 }
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.8.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.5.2.RELEASE'
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.5.2.RELEASE') {
-exclude(module: 'commons-logging')
+        exclude(module: 'commons-logging')
     }
     testCompile group: 'com.jayway.jsonpath', name: 'json-path', version:'2.2.0'
 }
